// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button default 1`] = `
<button
  className="sc-bdnylx hRGtB"
  onClick={[Function]}
>
  button label
</button>
`;

exports[`Storyshots Button different 1`] = `
<button
  className="sc-bdnylx hRGtB"
  onClick={[Function]}
>
  button-label-1
</button>
`;
